ingress-example/product-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: products-node-svc
spec:
    selector:
        app: products
    ports:
        - port: 80
          protocol: TCP
          targetPort: 8080
    type: NodePort
