ingress-example/user-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
    name: users-node-svc
spec:
    selector:
        app: users
    ports:
        - port: 80
          protocol: TCP
          targetPort: 8080
    type: NodePort
